--- a/index.html
+++ b/index.html
@@ -32,25 +32,26 @@
             <img src="./images/banner/logo/small-logo.svg" alt="">
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">店家理念</a>
+            <a href="#concept" class="nav-link">店家理念</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">店家環境</a>
+            <a href="#environment" class="nav-link">店家環境</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">好食餐點</a>
+            <a href="#food-card" class="nav-link">好食餐點</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">幸福菜單</a>
+            <a href="#menu" class="nav-link">幸福菜單</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">寵物認養</a>
+            <a href="#adoption-info" class="nav-link">寵物認養</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">店家咨詢</a>
           </li>
         </ul>
       </div>
+      
 
       <!-- 導航列結束 -->
       <!-- 店家的logo與slogan開始 -->
@@ -697,15 +698,15 @@
       <h1>下一站，家</h1>
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">Slide 1</div>
-          <div class="swiper-slide">Slide 2</div>
-          <div class="swiper-slide">Slide 3</div>
-          <div class="swiper-slide">Slide 4</div>
-          <div class="swiper-slide">Slide 5</div>
-          <div class="swiper-slide">Slide 6</div>
-          <div class="swiper-slide">Slide 7</div>
-          <div class="swiper-slide">Slide 8</div>
-          <div class="swiper-slide">Slide 9</div>
+          <div class="swiper-slide"><img src="./images/dog+cat/cat-1.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/cat-2.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/cat-3.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/cat-4.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/cat-5.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/dog-1.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/dog-2.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/dog-3.jpg"></div>
+          <div class="swiper-slide"><img src="./images/dog+cat/dog-4.jpg"></div>
         </div>
       </div>
     </section> <!-- 下一站，家區塊結束 -->
