adoption-section-completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="favicon.svg">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
   <title>Homecafe</title>
 </head>
@@ -32,22 +33,22 @@
             <img src="./images/banner/logo/small-logo.svg" alt="">
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">店家理念</a>
+            <a href="#concept" class="nav-link">店家理念</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">店家環境</a>
+            <a href="#environment" class="nav-link">店家環境</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">好食餐點</a>
+            <a href="#food-card" class="nav-link">好食餐點</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">幸福菜單</a>
+            <a href="#menu" class="nav-link">幸福菜單</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">寵物認養</a>
+            <a href="#adoption-info" class="nav-link">寵物認養</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">店家咨詢</a>
+            <a href="#story" class="nav-link">店家咨訊</a>
           </li>
         </ul>
       </div>
@@ -301,14 +302,17 @@
                   <h3>韓式泡菜海鮮義大利麵</h3>
                   <span>$260</span>
                 </div>
+                <div class="img">
+                  <img class="dog" src="./images/幸福菜單/icons/dog.svg" alt="">
+                  <img class="cat" src="./images/幸福菜單/icons/cat.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
           <!--文字部分-->
           <div class="pasta-pic">
             <!--圖片部分-->
-            <img class="dog" src="./images/幸福菜單/icons/dog.svg" alt="">
-            <img class="cat" src="./images/幸福菜單/icons/cat.svg" alt="">
+            <img src="./images/幸福菜單/義大利麵/pasta01.jpg"></img>
           </div>
           <!--圖片部分-->
         </div>
@@ -376,10 +380,16 @@
           <div class="hot-pot-pic">
             <!--圖片部分-->
             <div class="hot-pot-left">
-              <div class="hot-pot1"></div>
-              <div class="hot-pot2"></div>
+              <div class="left1">
+                <img src="./images/幸福菜單/暖心鍋物/hotpot-leftt01.jpg" alt="">
+              </div>
+              <div class="left2">
+                <img src="./images/幸福菜單/暖心鍋物/hotpot-left02.jpg" alt="">
+              </div>
             </div>
-            <div class="hot-pot-right"></div>
+            <div class="hot-pot-right">
+              <img src="./images/幸福菜單/暖心鍋物/hotpot-right01.jpg" alt="">
+            </div>
           </div>
           <!--圖片部分-->
         </div>
@@ -420,10 +430,16 @@
           </div>
           <div class="chef-pic">
             <div class="chef-left">
-              <div class="chef1"></div>
-              <div class="chef2"></div>
+              <div class="chef1">
+                <img src="./images/幸福菜單/主廚料理/chef-left01.jpg" alt="" class="">
+              </div>
+              <div class="chef2">
+                <img src="./images/幸福菜單/主廚料理/chef-left02.jpg" alt="">
+              </div>
             </div>
-            <div class="chef-right"></div>
+            <div class="chef-right">
+              <img src="./images/幸福菜單/主廚料理/chef-right.jpg" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -482,8 +498,12 @@
 
           <div class="light-pic">
             <!--圖片部分-->
-            <div class="light1"></div>
-            <div class="light2"></div>
+            <div class="light1">
+              <img src="./images/幸福菜單/活力輕食/light01.jpg" alt="">
+            </div>
+            <div class="light2">
+              <img src="./images/幸福菜單/活力輕食/light02.jpg" alt="">
+            </div>
           </div>
           <!--圖片部分-->
         </div>
@@ -529,14 +549,17 @@
                   <h3>特製椒鹽雞丁</h3>
                   <span>$150</span>
                 </div>
+                <div class="img">
+                  <img class="dog" src="./images/幸福菜單/icons/dog.svg" alt="">
+                  <img class="cat" src="./images/幸福菜單/icons/cat.svg" alt="">
+                </div>
               </div>
             </div>
           </div>
           <!--文字部分-->
           <div class="snack-pic">
             <!--圖片部分-->
-            <img class="dog" src="./images/幸福菜單/icons/dog.svg" alt="">
-            <img class="cat" src="./images/幸福菜單/icons/cat.svg" alt="">
+            <img src="./images/幸福菜單/好食點心/fries01.jpg" alt="">
           </div>
           <!--圖片部分-->
         </div>
@@ -633,7 +656,7 @@
           </div>
           <!--文字部分-->
           <div class="drink-pic">
-            <!--圖片部分-->
+            <img src="./images/幸福菜單/好食飲品/drink01.jpg" alt="">
           </div>
           <!--圖片部分-->
         </div>
@@ -664,10 +687,16 @@
           <img class="cat" src="./images/幸福菜單/icons/cat.svg" alt="">
           <div class="pet-food-pic">
             <div class="pet-food-left">
-              <div class="pet-food1"></div>
-              <div class="pet-food2"></div>
+              <div class="pet-food1">
+                <img src="./images/幸福菜單/寵物鮮食/petfood-left01.jpg" alt="">
+              </div>
+              <div class="pet-food2">
+                <img src="./images/幸福菜單/寵物鮮食/petfood-left02.jpg" alt="">
+              </div>
             </div>
-            <div class="pet-food-right"></div>
+            <div class="pet-food-right">
+              <img src="./images/幸福菜單/寵物鮮食/petfood-right.jpg" alt="">
+            </div>
           </div>
         </div>
       </div>
@@ -676,18 +705,34 @@
     <section id="adoption-info">
       <!-- 寵物認養區塊開始-->
       <h1>寵物認養</h1>
-      <ul class="nav-items">
-        <li class="nav-item">
-          <a href="#" class="nav-link">認養流程</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">領養條件</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link">認養須知</a>
-        </li>
-      </ul>
-      <div class="dialog"></div>
+      <div class="questions">
+
+        <input type="radio" name="question" class="radio" id="q1">
+        <label class="question btn-q1" for="q1">認養流程</label>
+
+        <input type="radio" name="question" class="radio" id="q2">
+        <label class="question btn-q2" for="q2">領養條件</label>
+
+        <input type="radio" name="question" class="radio" id="q3">
+        <label class="question btn-q3" for="q3">認養須知</label>
+
+      </div>
+      <div class="dialog">
+        <div class="profile-pic"></div>
+        <div class="message">
+          <p class="from-customers" data-aos="fade-right">哈囉！我想請問貴店領養毛孩的流程和手續~</p>
+          <p class="from-us-1" data-aos="fade-left" data-aos-delay="1000">
+            歡迎預約來現場看過貓狗🙂有認養意願後找老闆談談詢問相關細節（聊聊天）<br>
+            以下是認養流程：<br>
+            🐾一週冷靜期<br>
+            🐾思考後確定自己真的想養<br>
+            🐾主動聯繫老闆<br>
+            🐾帶貓狗回家一起過一輩子😎</p>
+          <p class="from-us-2" data-aos="fade-left" data-aos-delay="2000">我們並不會禁止情侶或是學生領養喔，但是學生的話會需要您先
+            跟家長溝通，家長同意後也會讓您挑選心愛的毛孩帶回家喔！</p>
+
+        </div>
+        <div class="logo-pic"></div>
     </section> <!-- 寵物認養區塊結束-->
 
 
@@ -806,6 +851,10 @@
 
   <!-- javascript 區塊 -->
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init()
+  </script>
   <script src="./index.js"></script>
 
   <!-- Initialize Swiper -->
