--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 minimum-scale=1.0 maximum-scale=1.0">
   <link rel="shortcut icon" href="favicon.svg">
   <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css">
@@ -23,6 +23,34 @@
   <!--這個頁面會覆蓋掉整個body  -->
 
   <main>
+    <div class="nav-mobile">
+      <img class="logo-mobile" src="./images/banner/icons/nav-icon.svg" alt="navLogo">
+      <div class="nav-banner">
+        <ul class="nav-items-mobile">
+          <li class="nav-item-mobile">
+            <a href="#" class="nav-link-mobile">返回首頁</a>
+          </li>
+          <li class="nav-item-mobile">
+            <a href="#concept" class="nav-link-mobile">店家理念</a>
+          </li>
+          <li class="nav-item-mobile">
+            <a href="#environment" class="nav-link-mobile">店家環境</a>
+          </li>
+          <li class="nav-item-mobile">
+            <a href="#food-card" class="nav-link-mobile">好食餐點</a>
+          </li>
+          <li class="nav-item-mobile">
+            <a href="#menu" class="nav-link-mobile">幸福菜單</a>
+          </li>
+          <li class="nav-item-mobile">
+            <a href="#adoption-info" class="nav-link-mobile">寵物認養</a>
+          </li>
+          <li class="nav-item-mobile">
+            <a href="#story" class="nav-link-mobile">店家咨訊</a>
+          </li>
+        </ul>
+      </div>
+    </div>
     <section id="banner">
       <!-- banner開始 -->
       <!-- 導航列開始 -->
@@ -47,7 +75,7 @@
             <a href="#adoption-info" class="nav-link">寵物認養</a>
           </li>
           <li class="nav-item">
-            <a href="#story" class="nav-link">店家咨訊</a>
+            <a href="#story" class="nav-link">店家資訊</a>
           </li>
         </ul>
       </div>
@@ -847,4 +875,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./index.js"></script>
 </body>
+
 </html>
