--- a/index.html
+++ b/index.html
@@ -89,16 +89,19 @@
       <!-- 店家連結開始 -->
       <ul class="icons">
         <li class="icon">
-          <img src="./images/banner/icons/fb.svg" alt="">
+          <a href="https://www.facebook.com/homecafe58"><img src="./images/banner/icons/fb.svg" alt=""></a>
         </li>
         <li class="icon">
-          <img src="./images/banner/icons/ig.svg" alt="">
+          <a href="https://www.instagram.com/homecafe.tw/"><img src="./images/banner/icons/ig.svg" alt=""></a>
         </li>
         <li class="icon">
-          <img src="./images/banner/icons/fp.svg" alt="">
+          <a href="https://www.foodpanda.com.tw/restaurant/d7ub/homecafexing-fu-hao-shi"><img
+              src="./images/banner/icons/fp.svg" alt=""></a>
         </li>
         <li class="icon">
-          <img src="./images/banner/icons/ue.svg" alt="">
+          <a
+            href="https://www.ubereats.com/tw/store/homecafe%E5%B9%B8%E7%A6%8F%E5%A5%BD%E9%A3%9F/LP9sp2h8RW692UHslM7o0w?utm_source=AdWords_NonBrand&utm_campaign=CM2049501-search-google-nonbrand_195_-99_TW-National_e_all_acq_cpc_zh-TW_DSA_Exact__dsa-943561206466_501944317191_108073871272__c&campaign_id=10965569658&adg_id=108073871272&fi_id=&match=&net=g&dev=c&dev_m=&ad_id=501944317191&cre=501944317191&kwid=dsa-943561206466&kw=&placement=&tar=&gclid=Cj0KCQiA-eeMBhCpARIsAAZfxZA0rKTolU_6NFQkUojTV6c5lvPR_tj0iZ1o6sqhcM8ome1ame6xHRoaAiPeEALw_wcB&gclsrc=aw.ds"><img
+              src="./images/banner/icons/ue.svg" alt=""></a>
         </li>
       </ul>
       <!-- 店家連結結束 -->
