--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="#adoption-info" class="nav-link">寵物認養</a>
           </li>
           <li class="nav-item">
-            <a href="#story" class="nav-link">店家咨訊</a>
+            <a href="#story" class="nav-link">店家資訊</a>
           </li>
         </ul>
       </div>
