--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!-- 店家連結開始 -->
       <ul class="icons">
         <li class="icon">
-          <img src="./images/banner/icons/fb.svg" alt="">
+          <a href="https://www.facebook.com/homecafe58"><img src="./images/banner/icons/fb.svg" alt=""></a>
         </li>
         <li class="icon">
           <img src="./images/banner/icons/ig.svg" alt="">
